<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pca9685_ros2_control_example</name>
  <version>0.0.0</version>
  <description>Demo package of `ros2_control` hardware for Pca9685.</description>

  <maintainer email="max.polzin@epfl.ch">Max Polzin</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>pca9685_hardware_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 